--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -1,23 +1,20 @@
-<!-- <div class="cards" *ngFor="let a of articles">
- <div>
-  <h1>{{a.title}}</h1>
-  <p>{{a.content}}</p>
-   <h3>{{a.author}}</h3>
- <img src="{{a.articleImage}}" alt="{{a.title}}" srcset=""> 
- </div>  -->
 
-<!-- </div> -->
 <div class="container">
-
-  <div class="card" style="width: 18rem;" *ngFor="let a of articles">
-    <img src="{{a.articleImage}}"  style="height:12rem;" class="card-img-top" alt="{{a.title}}">
-    <div class="card-body">
-      <h5 class="card-title">{{a.title | slice:0:20}}</h5>
+  <div class="card" style="width: 22rem;" *ngFor="let a of articles">
+    <div class="position-relative">
+      <img src="{{a.articleImage}}" style="height:15rem;" class="card-img-top" alt="{{a.title}}">
+      <div class="card-img-overlay d-flex align-items-end justify-content-center">
+        <h5 class="card-title text-white">{{a.title | slice:0:20}}</h5>
+      </div>
+    </div>
+    <div class="card-body" style="height: 15rem;">
+      <h5 class="card-title ">{{a.title | slice:0:20}}</h5>
       <p class="card-text">{{a.content | slice:0:100}}..</p>
+      <div> Posted On:{{a.createdAt | slice:0:10}} </div>
       <a href="{{a.articleImage}}" target="_blank" class="btn btn-primary">Read More</a>
       <button class="btn btn-warning" (click)="deleteArticle(a._id)">Delete</button>
-      <p></p>
-
+      
     </div>
   </div>
 </div>
+
