--- a/src/app/contact-us/contact-us.component.css
+++ b/src/app/contact-us/contact-us.component.css
@@ -2,4 +2,8 @@
     display: flex;
     height: 70vh;
     align-items: center;
-}
+    background-color: rgb(79, 79, 79);
+    display: flex;
+    flex-flow: wrap;
+  }
+
