--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,38 +1,67 @@
-
-<div class="container-fluid p-0 mb-5">
+<!-- <div class="container-fluid p-0 mb-5">
   <div class="position-relative">
-    <!-- <div class="container-fluid p-0 position-relative"> -->
-    <!-- Big background image -->
-    <img src="assets/background.avif" class="img-fluid imz" alt="Big Image"style="width: 100%; height:10%;"/>
+     <div class="container-fluid p-0 position-relative"> -->
+<!-- Big background image -->
+<!-- <img src="assets/background.avif" class="img-fluid imz" alt="Big Image"style="width: 100%; height:10%;"/>
     
-    <!-- Image overlay -->
+    Image overlay 
     <div class="position-absolute top-0" style="margin-top: 5%; margin-left:55%; margin-right: 5%;" >
-      <!-- Small image on top -->
+       Small image on top 
       <img src="assets/Mirrorworld.webp" class="img-fluid small-image" alt="Small Image">
     </div>
     <div class="overlay"></div>
-  </div></div>
+  </div></div>  -->
 
   <div class="container mb-5 mt-5">
-    <div class="row mb-10">
-      <div class="left-content">
-        <h1 style="text-align: center; ">Latest Articles</h1>
-        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque cumque sit quibusdam dolor inventore voluptatem deserunt esse laborum perspiciatis! Porro quidem ducimus laboriosam quasi veniam nemo perferendis laudantium ipsam soluta!</h4>
+    <div class="row mb-10 justify-content-center">
+      <div class="content">
+        <h1 style="text-align: center;"><b>Digital Business Review Magazine</b></h1>
+        <p style="text-align: center;">Welcome to Digital Business Review Magazine, your premier source for insightful analysis, in-depth interviews, and cutting-edge trends in the world of digital business.</p>
+        <h3 style="text-align: center;">Coming Soon.....</h3>
       </div>
-      <div class="col-md-7 mb-10">
-        <div class="right-slider1">
-          <div id="carouselExampleAutoplaying" class="carousel slide mx-4" data-bs-ride="carousel">
+    </div>
+  </div>
+  
+<div class="carouselBg">
+  <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner justify-content-center"> <!-- Add justify-content-center class here -->
+      <div class="carousel-item" *ngFor="let a of articles; let i = index" [class.active]="i === 0">
+        <img src="{{a.articleImage}}" class="d-block img1 mx-auto" alt="{{a.title}}"> <!-- Add mx-auto class here -->
+        <div class="carousel-caption d-none ">
+          <h5>{{a.title}}</h5>
+          <a href="{{a.articleImage}}" target="_blank" class="btn btn-primary">Read More</a>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>
+</div>
+<div>
+<div>
+</div>
+  <!-- <div class="container">
+      <div class="col-md-3 mb-10 center">
+        <div class="right-slider1 ">
+          <div id="carouselExample" class="carousel slide mx-4" data-bs-ride="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="assets/pexels-erik-mclean-7524997.jpg" class="d-block w-100 img1" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="assets/pexels-erik-mclean-7524998.jpg"  class="d-block w-100 img1" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="assets/pexels-natasha-kendall-4093392.jpg"  class="d-block w-100 img1" alt="...">
+            Loop through each article to create carousel items 
+              <div class="carousel-item" *ngFor="let a of articles; let i = index" [class.active]="i === 0">
+                <img src="{{a.articleImage}}" class="d-block w-40 img1" alt="{{a.title}}">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>{{a.title}}</h5>
+                   <p>{{a.content | slice:0:100}}..</p> 
+                  <a href="{{a.articleImage}}" target="_blank" class="btn btn-primary">Read More</a>
+                </div>
               </div>
             </div>
+             Carousel controls 
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Previous</span>
@@ -43,11 +72,76 @@
             </button>
           </div>
         </div>
+        </div>
+      </div> -->
+  
+          <!-- <div class="carousel-item active " *ngFor="let a of articles; let i = index" [class.active]="i === 0">
+            <img src="{{a.articleImage}}" class="d-block w-40 img1" alt="{{a.title}}">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>{{a.title}}</h5>
+               <p>{{a.content | slice:0:100}}..</p> 
+              <a href="{{a.articleImage}}" target="_blank" class="btn btn-primary">Read More</a>
+            </div>
+          </div> -->
+<br>
+</div>
+
+      <!-- <div class="col-md-7 mb-10">
+    <div class="right-slider1">
+      <div id="carouselExampleAutoplaying" class="carousel slide mx-4" data-bs-ride="carousel">
+        <div class="carousel-inner"> -->
+      <!-- Loop through each article to create carousel items -->
+      <!-- <div class="carousel-item" *ngFor="let a of articles; let i = index" [class.active]="i === 0">
+            <img src="{{a.articleImage}}" class="d-block w-100 img1" alt="{{a.title}}">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>{{a.title}}</h5>
+              <p>{{a.content | slice:0:100}}..</p>
+            </div>
+          </div>
+        </div> -->
+      <!-- Carousel controls -->
+      <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
     </div>
-  </div>
-  
-  <div class="container">
+  </div> -->
+
+      <!-- <img src="assets/pexels-erik-mclean-7524997.jpg" class="d-block w-100 img1" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Second slide label</h5>
+                  <p>Some representative placeholder content for the second slide.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="assets/pexels-erik-mclean-7524998.jpg"  class="d-block w-100 img1" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/pexels-natasha-kendall-4093392.jpg"  class="d-block w-100 img1" alt="...">
+              </div>
+            </div> -->
+
+      <!-- articles total details in content page -->
+      <!-- <div class="container">
+
+              <div class="card" style="width: 18rem;" *ngFor="let a of articles">
+                <img src="{{a.articleImage}}"  style="height:12rem;" class="card-img-top" alt="{{a.title}}">
+                <div class="card-body">
+                  <h5 class="card-title">{{a.title | slice:0:20}}</h5>
+                  <p class="card-text">{{a.content | slice:0:100}}..</p>
+                  <a href="{{a.articleImage}}" target="_blank" class="btn btn-primary">Read More</a>
+                  <button class="btn btn-warning" (click)="deleteArticle(a._id)">Delete</button>
+                  <p></p>
+            
+                </div>
+              </div>
+            </div> -->
+      <!-- <div class="container1">
     <div class="row justify-content-between">
       <div class="col-md-3 mt-4 mb-5">
         <div class="widget-content px-0">
@@ -86,52 +180,8 @@
         </div>
       </div>
     </div>
-  </div>
-  <!-- <div class="content-and-slider">
-  <div class="left-content">
-      <h1 style="text-align: center; text-decoration: underline;">Latest Articles</h1>
-  </div>
-  <div class="right-slider">
-     
-      <div id="carouselExampleAutoplaying" class="carousel slide mx-4" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="assets/pexels-erik-mclean-7524997.jpg" class="d-block w-100 img1" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="assets/pexels-erik-mclean-7524998.jpg"  class="d-block w-100 img1" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="assets/pexels-natasha-kendall-4093392.jpg"  class="d-block w-100 img1" alt="...">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-       
-     </div>
-     
-  </div>
+  </div> -->
 
- </div>  -->
- <!-- <br><br><br><br><br><br><br><br><br> -->
- 
 
- <div><div>
- Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab autem fugit inventore aut possimus, reiciendis mollitia modi! Ratione distinctio placeat deleniti fuga vel illo laboriosam ex quidem, fugiat, facilis magni?Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga rem necessitatibus nisi perferendis deserunt sequi culpa eveniet, debitis eius quisquam maiores illo tempore nemo. Animi quia dicta tenetur nulla optio?Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, id voluptas sed recusandae voluptatum corrupti aliquam delectus! Eius tempora quidem itaque velit quasi repudiandae necessitatibus, facilis vero, ex quis officiis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur eligendi asperiores necessitatibus. Repellendus laboriosam accusamus quos eos suscipit voluptates. Nobis nulla, ipsa natus ut rem maxime beatae modi quidem molestiae.lorem Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga nulla fugiat soluta doloribus quibusdam, ducimus quas itaque unde minus ut nesciunt corrupti laboriosam amet et quasi cum laudantium sunt optio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus soluta inventore magnam enim earum porro repellat labore harum consectetur quis maiores exercitationem velit in, nam veritatis, quod aliquam ea mollitia? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit itaque beatae eveniet laborum cupiditate tenetur est, dolores accusamus, commodi deserunt eaque aliquam, pariatur dolor. Aliquid temporibus vel assumenda nobis. Labore?
-</div>
-<div>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab autem fugit inventore aut possimus, reiciendis mollitia modi! Ratione distinctio placeat deleniti fuga vel illo laboriosam ex quidem, fugiat, facilis magni?Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga rem necessitatibus nisi perferendis deserunt sequi culpa eveniet, debitis eius quisquam maiores illo tempore nemo. Animi quia dicta tenetur nulla optio?Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, id voluptas sed recusandae voluptatum corrupti aliquam delectus! Eius tempora quidem itaque velit quasi repudiandae necessitatibus, facilis vero, ex quis officiis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur eligendi asperiores necessitatibus. Repellendus laboriosam accusamus quos eos suscipit voluptates. Nobis nulla, ipsa natus ut rem maxime beatae modi quidem molestiae.lorem Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga nulla fugiat soluta doloribus quibusdam, ducimus quas itaque unde minus ut nesciunt corrupti laboriosam amet et quasi cum laudantium sunt optio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus soluta inventore magnam enim earum porro repellat labore harum consectetur quis maiores exercitationem velit in, nam veritatis, quod aliquam ea mollitia? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit itaque beatae eveniet laborum cupiditate tenetur est, dolores accusamus, commodi deserunt eaque aliquam, pariatur dolor. Aliquid temporibus vel assumenda nobis. Labore?
-</div>
-<div>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab autem fugit inventore aut possimus, reiciendis mollitia modi! Ratione distinctio placeat deleniti fuga vel illo laboriosam ex quidem, fugiat, facilis magni?Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga rem necessitatibus nisi perferendis deserunt sequi culpa eveniet, debitis eius quisquam maiores illo tempore nemo. Animi quia dicta tenetur nulla optio?Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, id voluptas sed recusandae voluptatum corrupti aliquam delectus! Eius tempora quidem itaque velit quasi repudiandae necessitatibus, facilis vero, ex quis officiis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur eligendi asperiores necessitatibus. Repellendus laboriosam accusamus quos eos suscipit voluptates. Nobis nulla, ipsa natus ut rem maxime beatae modi quidem molestiae.lorem Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga nulla fugiat soluta doloribus quibusdam, ducimus quas itaque unde minus ut nesciunt corrupti laboriosam amet et quasi cum laudantium sunt optio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus soluta inventore magnam enim earum porro repellat labore harum consectetur quis maiores exercitationem velit in, nam veritatis, quod aliquam ea mollitia? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit itaque beatae eveniet laborum cupiditate tenetur est, dolores accusamus, commodi deserunt eaque aliquam, pariatur dolor. Aliquid temporibus vel assumenda nobis. Labore?
-</div>
-<div>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab autem fugit inventore aut possimus, reiciendis mollitia modi! Ratione distinctio placeat deleniti fuga vel illo laboriosam ex quidem, fugiat, facilis magni?Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga rem necessitatibus nisi perferendis deserunt sequi culpa eveniet, debitis eius quisquam maiores illo tempore nemo. Animi quia dicta tenetur nulla optio?Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, id voluptas sed recusandae voluptatum corrupti aliquam delectus! Eius tempora quidem itaque velit quasi repudiandae necessitatibus, facilis vero, ex quis officiis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur eligendi asperiores necessitatibus. Repellendus laboriosam accusamus quos eos suscipit voluptates. Nobis nulla, ipsa natus ut rem maxime beatae modi quidem molestiae.lorem Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga nulla fugiat soluta doloribus quibusdam, ducimus quas itaque unde minus ut nesciunt corrupti laboriosam amet et quasi cum laudantium sunt optio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus soluta inventore magnam enim earum porro repellat labore harum consectetur quis maiores exercitationem velit in, nam veritatis, quod aliquam ea mollitia? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit itaque beatae eveniet laborum cupiditate tenetur est, dolores accusamus, commodi deserunt eaque aliquam, pariatur dolor. Aliquid temporibus vel assumenda nobis. Labore?
-</div></div>
 
+      <!-- <br><br><br><br><br><br><br><br><br> -->
