--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,46 +1,35 @@
-<nav class="navbar navbar-bottom">
- 
-    <div class="container ">
-      <div class="promo">
-        Get A Chance To Feature In Magazine By Submitting Your Interview Today!
-      </div>
-      <div class="Smedia">
-
-        <a class="navbar-brand" href="https://www.facebook.com/" target="_blank">
-          <img src="assets/facebook-icon.svg" alt="Bootstrap" width="30" height="24">
-        </a>
-        <a class="navbar-brand" href="https://twitter.com/?lang=en" target="_blank">
-          <img src="assets/icons8-twitter.svg" alt="Bootstrap" width="30" height="24">
-        </a>
-        <a class="navbar-brand" href="https://www.instagram.com/" target="_blank">
-          <img src="assets/icons8-instagram.svg" alt="Bootstrap" width="30" height="24">
-        </a>
-        <a class="navbar-brand" href="https://in.linkedin.com/" target="_blank">
-        <img src="assets/icons8-linkedin.svg" alt="Bootstrap" width="30" height="24">
-      </a>
-    </div>
-    </div>
-  
-</nav>
 
 <footer class="footer bg-dark text-light py-4">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <h5>Footer Content</h5>
-          <p>This is some sample footer content. You can add any additional information here.</p>
-        </div>
-        <div class="col-md-6">
-          <h5>Contact Us</h5>
-          <address>
-            123 Main Street<br>
-            City, State, Zip<br>
-            Country<br>
-            Email: example@example.com<br>
-            Phone: 123-456-7890
-          </address>
-        </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <a class="navbar-brand" href="#" style="position: center;">
+          <img src="assets/logobgR.png" alt="logo" width="280rem" height="60rem">
+        </a>
+        <div>
+      <a class="navbar-brand" href="https://www.facebook.com/" target="_blank">
+        <img src="assets/facebook-icon.svg" alt="Bootstrap" width="30" height="24">
+      </a>
+      <a class="navbar-brand" href="https://twitter.com/?lang=en" target="_blank">
+        <img src="assets/icons8-twitter.svg" alt="Bootstrap" width="30" height="24">
+      </a>
+      <a class="navbar-brand" href="https://www.instagram.com/" target="_blank">
+        <img src="assets/icons8-instagram.svg" alt="Bootstrap" width="30" height="24">
+      </a>
+      <a class="navbar-brand" href="https://in.linkedin.com/" target="_blank">
+      <img src="assets/icons8-linkedin.svg" alt="Bootstrap" width="30" height="24">
+    </a></div>
+      </div>
+      <div class="col-md-6">
+        <h5>Contact Us</h5>
+        <address>
+          123 Main Street<br>
+          City, State, Zip<br>
+          Country<br>
+          Email: digitalbusinessreviewmagazine@gmail.com<br>
+         
+        </address>
       </div>
     </div>
-  </footer>
-  
+  </div>
+</footer>
