--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -1,8 +1,39 @@
- 
+body, html {
+  height: 100%;
+}
+
+/* The hero image */
+.imgContainer {
+  position: relative;
+  max-height: 800rem; /* Maximum width */
+  margin: 0 auto; /* Center it */
+}
+
+.text-block {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.527);
+  color: white;
+  padding: 2rem;
+  text-align: center;
+}
+
   .container{
-    background-color: rgb(129, 189, 183);
+    background-color: rgb(60, 61, 61);
     display: flex;
     flex-flow: wrap;
+  }
+  .heading {
+    font-size: 7rem;
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  }
+  
+  .text-container {
+    display: inline-block;
+    width: 100%; /* Ensure it takes up the full width of its container */
   }
   
   .container div{
@@ -34,10 +65,10 @@
   /* .container div{
     margin: 10px;
   } */
-body{
+/* body{
     margin: 0;
     padding: 0;
-}
+} */
 .small-image {
     max-width: 100%; /* Adjust the maximum width as needed */
   }
@@ -49,13 +80,14 @@ body{
   display :block;
   background-color: rgb(243, 211, 211);
 }
+
 .content{
   /* flex:1 1; */
   margin: 0 auto;
-  padding-top: 2rem;
+  padding-top: 1rem;
   padding-bottom: 2rem;
   display :block;
-  background:rgb(255, 255, 255);
+  background:rgb(250, 250, 250);
 }
 .right-slider1{
     justify-content: center;
@@ -101,12 +133,7 @@ body{
     flex-grow: 1;
 }
 
-.footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 20px 0;
-}
+
 .background-wrapper {
     /* background-image: url('assets/background.avif'); */
     background-size: cover; /* Adjust background size as needed */
