--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -4,34 +4,25 @@
     transition: 0.5s linear;
     top: 0px;
 }
-
 .nofixed {
     position: static;
     transition: 0.5s linear;
     top: -50px;
 }
 .navbar-top {
-    /* background:linear-gradient(to right,rgb(180, 208, 241) , rgba(1, 1, 1, 0.416),rgb(180, 208, 241)); */
-
     /* background:linear-gradient(to right,rgb(230, 212, 212) , rgba(255, 255, 255, 0.95),rgb(184, 148, 148)); */
-    background:linear-gradient(to right,rgb(243,211,211),rgb(112, 203, 186));
+    /* background:linear-gradient(to right,rgb(187, 208, 249),rgb(112, 203, 186)); */
+        background:linear-gradient(to right,rgb(248, 249, 252),rgb(248, 249, 251));
     /* 230, 212, 212    184, 148, 148    180, 208, 241   160,277,237 */
-
 }
-.navbar-top a{
-    color:white;
-}
-
 .navbar-brand{
     margin-right: 26pt;
     padding-left: 0%;
 }
-
 .navbar-bottom{
     color: white;
     background-color: black;
 }
-/* my-component.component.css */
 .overlay {
     position: absolute;
     top: 0;
@@ -41,9 +32,26 @@
     background: rgba(255, 253, 253, 0.011); /* Adjust the opacity as needed */
     z-index: 1;
   }
-.container{
-    color: white;
-}
 .space{
     flex: 31 1 auto;
 }
+.smedia{
+    text-size-adjust: 0.5rem;
+}
+.btn {
+    background-color: rgb(248, 249, 252);
+    color: black;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+  }
+  .btn-black {
+    background-color: black;
+    color: white;
+  }
+   .btn:hover {
+    background-color: black; /* Change background color on hover */
+  color: white; /* Change text color on hover */
+ } 
+  
