--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 
-<div class="container-fluid p-0">
+<div class="fluid p-0">
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-top bg-body-tertiary"  (scroll)="onscroll()" [ngClass]="navbarfixed?'fixed':'nofixed'">
-    <div class="container-fluid container ">
+    <div class="container-fluid ">
       <a class="navbar-brand" href="#">
         <img src="assets/logobgR.png" alt="logo" width="280rem" height="40rem">
       </a>
@@ -12,17 +12,17 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" [routerLink]="['/']">Home</a>
+          <a class="nav-link  btn"  aria-current="page" [routerLink]="['/']">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/articles']">Articles</a>
+          <a class="nav-link btn"  [routerLink]="['/articles']">Articles</a>
         </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/articles']">Magazines</a>
-        </li> -->
-        <!-- <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/articles']">Industry</a>
-        </li> -->
+        <li class="nav-item">
+          <a class="nav-link btn"  [routerLink]="['/articles']">Magazines</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link btn"  [routerLink]="['/articles']">Industry</a>
+        </li>
        
         <!-- <li class="nav-item ">
           <a class="nav-link disabled" [routerLink]="['/addarticles']">Add Articles</a>
@@ -31,10 +31,10 @@
           <a class="nav-link" [routerLink]="['/addarticles']">Add Magazines</a>
         </li> -->
         <li class="nav-item">
-          <a class="nav-link"  [routerLink]="['/contactus']">Contact Us</a>
+          <a class="nav-link btn"  [routerLink]="['/contactus']">Contact Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link"  [routerLink]="['/aboutUs']">About Us</a>
+          <a class="nav-link btn"  [routerLink]="['/aboutUs']">About Us</a>
         </li>
       </ul>
       <!-- <form class="d-flex" role="search">
