--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -14,7 +14,7 @@
   <div class="imgContainer">
     <img src="assets/background.jpg" alt="Notebook" style="width:100%; height:32rem;">
     <div class="text-block">
-      <h1>Digital Business Review Magazine</h1>
+      <h1>Digital Businessdddd Review Magazine</h1>
       <p>Welcome to Digital Business Review Magazine, your premier source for insightful analysis, in-depth interviews, and cutting-edge trends in the world of digital business.</p>
     </div>
   </div>
