--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -24,9 +24,9 @@
           <a class="nav-link btn"  [routerLink]="['/articles']">Industry</a>
         </li>
        
-        <!-- <li class="nav-item ">
-          <a class="nav-link disabled" [routerLink]="['/addarticles']">Add Articles</a>
-        </li> -->
+        <li class="nav-item ">
+          <a class="nav-link btn" [routerLink]="['/addarticles']">Add Articles</a>
+        </li> 
         <!-- <li class="nav-item">
           <a class="nav-link" [routerLink]="['/addarticles']">Add Magazines</a>
         </li> -->
