--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-top bg-body-tertiary"  (scroll)="onscroll()" [ngClass]="navbarfixed?'fixed':'nofixed'">
     <div class="container-fluid ">
       <a class="navbar-brand" href="#">
-        <img src="assets/logobgR.png" alt="logo" width="280rem" height="40rem">
+        <img src="assets/logobgR.jpg" alt="logo" width="280rem" height="40rem">
       </a>
     <span class="space"></span>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
