--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -2,3 +2,8 @@
     color: white;
     background-color: black;
 }
+.image{
+    display: flex;
+    justify-content: center; /* Horizontally center the content */
+    align-items: center;
+}
