--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,3 +1,9 @@
 .container{
-    background-color: aqua;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+    max-width: 50rem;
+    background-color: black;
+    border-radius: 2rem;
 }
