--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -43,15 +43,15 @@
     </div>
   </div>
   <div class="imgcontainer">
-    <div class="content-and-slider">
+    <div class="content-and-slider" *ngFor="let article of articles; let i = index" >
       <div class="left-content">
           <h1 style="text-align: center;">Latest Articles</h1>
-<div>      <p class="card-text">{{articles[0].content | slice:0:500}}..</p>
-</div>      </div>
+ <div>      <p class="card-text">{{article[0].content | slice:0:500}}..</p></div>    
+  </div>
       <div class="right-slider">
         <div class="widget-content px-0">
           <div class="chart d-flex justify-content-center">
-            <img src="{{articles[0]?.articleImage}}" alt="{{articles[0]?.title}}" class="large-image" alt="Image 1">
+            <img src="{{article[0]?.articleImage}}" alt="{{article[0]?.title}}" class="large-image" alt="Image 1">
             <!-- <a href="{{articles[0]?.articleImage}}" target="_blank" class="btn btn-primary">Read More</a> -->
           </div>
         </div>
@@ -92,18 +92,6 @@
         <h1 style="text-align: center;"><b>Digital Business Review Magazine</b></h1>
         <p style="text-align: center;">Welcome to Digital Business Review Magazine, your premier source for insightful analysis, in-depth interviews, and cutting-edge trends in the world of digital business.</p>
         <h3 style="text-align: center;">Coming Soon.....</h3>
-      
-        <h1 style="text-align: center;"><b>Digital Business Review Magazine</b></h1>
-        <p style="text-align: center;">Welcome to Digital Business Review Magazine, your premier source for insightful analysis, in-depth interviews, and cutting-edge trends in the world of digital business.</p>
-        <h3 style="text-align: center;">Coming Soon.....</h3>
-     
-        <h1 style="text-align: center;"><b>Digital Business Review Magazine</b></h1>
-        <p style="text-align: center;">Welcome to Digital Business Review Magazine, your premier source for insightful analysis, in-depth interviews, and cutting-edge trends in the world of digital business.</p>
-        <h3 style="text-align: center;">Coming Soon.....</h3>
-      
-        <h1 style="text-align: center;"><b>Digital Business Review Magazine</b></h1>
-        <p style="text-align: center;">Welcome to Digital Business Review Magazine, your premier source for insightful analysis, in-depth interviews, and cutting-edge trends in the world of digital business.</p>
-        <h3 style="text-align: center;">Coming Soon.....</h3>
       </div>
     </div>
   </div>
@@ -120,7 +108,7 @@
     
 
       
-      <div class="container1">
+      <div class="container1" style="background-color: aqua;">
     <div class="row justify-content-between">
       <div class="col-md-3 mt-4 mb-5" *ngFor="let a of articles; let i = index" [class.active]="i === 0">
         <div class="widget-content px-0">
