--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,35 +1,41 @@
-
 <footer class="footer bg-dark text-light py-4">
   <div class="container">
     <div class="row">
-      <div class="col-md-6">
-        <a class="navbar-brand" href="#" style="position: center;">
-          <img src="assets/logobgR.png" alt="logo" width="280rem" height="60rem">
-        </a>
-        <div>
-      <a class="navbar-brand" href="https://www.facebook.com/" target="_blank">
-        <img src="assets/facebook-icon.svg" alt="Bootstrap" width="30" height="24">
+      <a class="image" href="#" >
+        <img src="assets/logobgR.jpg" alt="logo" width="280rem" height="60rem">
       </a>
-      <a class="navbar-brand" href="https://twitter.com/?lang=en" target="_blank">
-        <img src="assets/icons8-twitter.svg" alt="Bootstrap" width="30" height="24">
-      </a>
-      <a class="navbar-brand" href="https://www.instagram.com/" target="_blank">
-        <img src="assets/icons8-instagram.svg" alt="Bootstrap" width="30" height="24">
-      </a>
-      <a class="navbar-brand" href="https://in.linkedin.com/" target="_blank">
-      <img src="assets/icons8-linkedin.svg" alt="Bootstrap" width="30" height="24">
-    </a></div>
+      <div class="col-md-4">
+        <div><b>Digital Business </b>Review Magazine is a  your premier source for insightful analysis, in-depth interviews, and cutting-edge trends in the world of digital business.
+     </div>
       </div>
-      <div class="col-md-6">
-        <h5>Contact Us</h5>
+      <div class="col-md-4"><h3>Quick Links</h3><div>
+        <label >About Us</label><br>
+        <label >Advertise with Us</label><br>
+        <label >Pay Online</label><br>
+        <label >Subscribe Today</label><br>
+        <label >Privacy Policy</label><br>
+      </div></div>
+      <div class="col-md-4">
+        <h5><h3>Contact Us</h3></h5>
         <address>
           123 Main Street<br>
           City, State, Zip<br>
           Country<br>
-          Email: digitalbusinessreviewmagazine@gmail.com<br>
-         
-        </address>
+          Email: digitalbusinessreviewmagazinegmail.com<br></address>
+          <a class="navbar-brand" href="https://www.facebook.com/" target="_blank">
+          <img src="assets/facebook-icon.svg" alt="Bootstrap" width="30" height="24">
+        </a>
+        <a class="navbar-brand" href="https://twitter.com/?lang=en" target="_blank">
+          <img src="assets/twitter-icon.webp" alt="Bootstrap" width="25" height="20">
+        </a>
+        <a class="navbar-brand" href="https://www.instagram.com/" target="_blank">
+          <img src="assets/icons8-instagram.svg" alt="Bootstrap" width="30" height="24">
+        </a>
+        <a class="navbar-brand" href="https://in.linkedin.com/" target="_blank">
+        <img src="assets/icons8-linkedin.svg" alt="Bootstrap" width="30" height="24">
+      </a>      
       </div>
+      <div></div>
     </div>
   </div>
 </footer>
