--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -34,10 +34,10 @@
           <a class="nav-link btn"  [routerLink]="['/contactus']">Contact Us</a>
         </li>
         <li class="nav-item" (click)="setActive('aboutus')" [class.active]="activeTab === 'aboutus'">
-          <a class="nav-link btn"  [routerLink]="['/aboutUs']">About Us</a>
+          <a class="nav-link btn"  [routerLink]="['/aboutus']">About Us</a>
         </li>
         <li class="nav-item" >
-          <a class="nav-link btn"  [routerLink]="['/register']">Login</a>
+          <a class="nav-link btn"  [routerLink]="['/login']">Login</a>
         </li>
       </ul>
       
