--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -34,12 +34,12 @@
           <label style="color: white;" for="inputEmail6">Email address</label>
           <div class="form-floating mb-3">
             <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" formControlName="email">
-        </div><br>
+        </div>
     
           <label style="color: white;" for="inputPassword6">Password</label>
           <div class="form-floating">
             <input type="password" class="form-control" id="floatingPassword" placeholder="Password" formControlName="password">
-           </div><br><br>
+           </div><br>
     
           <div class="d-grid gap-2 col-6 mx-auto">
           <button routerLink="/addArticles" type="submit" class="btn btn-light">Login</button>
