--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -6,9 +6,9 @@
 }
 .large-image{
   width: 80%;
-  height: 10%;
+  height: 100%;
 }
-.text-block {
+/* .text-block {
   position: absolute;
   top: 60%;
   left: 50%;
@@ -17,7 +17,7 @@
   color: white;
   padding: 2rem;
   text-align: center;
-}
+} */
 .content-and-slider{
   padding-top: 2rem;
   padding-bottom: 2rem;
@@ -64,11 +64,44 @@
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   }
-  
   .text-container {
-    display: inline-block;
-    width: 100%; /* Ensure it takes up the full width of its container */
+    position: relative;
+    width: 100%;
   }
+  
+  .text-block {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.527);
+    color: white;
+    padding: 2rem;
+    text-align: center;
+    max-width: 80%; /* Limit the maximum width of the text block */
+  }
+  
+  
+  /* .text-container {
+    position: relative;
+    width: 100%;
+    display: inline-block;
+    width: 100%;
+  }
+  
+  .text-block {
+    position: relative;
+    top: 5%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.527);
+    color: white;
+    padding: 2rem;
+    text-align: center;
+    max-width: 80%; /* Limit the maximum width of the text block */
+  
+   */
+ 
   
   .container div{
     margin: 10px;
