--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -56,7 +56,7 @@
           <div class="chart d-flex justify-content-center">
             <img src="{{articles[0]?.articleImage}}" 
             alt="{{articles[0]?.title}}" 
-            class="large-image" alt="Image 1">
+            class="large-image" alt="Image 1" style="height: 15rem; width: 20rem;">
             <!-- <a href="{{articles[0]?.articleImage}}" target="_blank" class="btn btn-primary">Read More</a> -->
           </div>
         </div>
