--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,10 @@
-<p>dashboard works!</p>
+
+<div class="text-Container">
+    <img src="assets/small-image.jpg" alt="Notebook" style="width:100%; height:32rem;">
+    <div class="text-block">
+            <button type="button" class="btn btn-dark" routerLink="/addarticles">Add Article</button>
+            
+            <button type="button" class="btn btn-dark" routerLink="/addMagazine">Add Magazine</button>
+           
+   </div>
+</div>
