--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -29,7 +29,10 @@
         
     </form> 
     </div> -->
-    <div class="container">
+    <div class="text-Container">
+        <img src="assets/small-image.jpg" alt="Notebook" style="width:100%; height:32rem;">
+        <div class="text-block">
+    
         <form [formGroup]="loginForm" (ngSubmit)="onSubmitLogin()" enctype="multipart/form-data">
           <label style="color: white;" for="inputEmail6">Email address</label>
           <div class="form-floating mb-3">
@@ -46,4 +49,6 @@
           <!-- <span *ngIf="errorMessage" class="alert alert-danger"> {{ errorMessage }}</span> -->
           </div>
       </form>
+        
+        </div>
         </div>
