--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -67,19 +67,22 @@
   .text-container {
     position: relative;
     width: 100%;
+    display: flex;
+    justify-content: center;
   }
   
   .text-block {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     background-color: rgba(0, 0, 0, 0.527);
     color: white;
     padding: 2rem;
     text-align: center;
-    max-width: 80%; /* Limit the maximum width of the text block */
+    max-width: 80%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
+  
   
   
   /* .text-container {
