--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -11,13 +11,14 @@
     </div>
     <div class="overlay"></div>
   </div></div>  -->
-  <div class="text-Container">
+  <div class="text-container">
     <img src="assets/background.jpg" alt="Notebook" style="width:100%; height:32rem;">
     <div class="text-block">
       <h1>Digital Business Review Magazine</h1>
       <p>Welcome to Digital Business Review Magazine, your premier source for insightful analysis, in-depth interviews, and cutting-edge trends in the world of digital business.</p>
     </div>
   </div>
+  
   <div class="carouselBg">
     <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner justify-content-center"> <!-- Add justify-content-center class here -->
