--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -47,7 +47,7 @@
     <div class="content-and-slider">
       <div class="left-content">
           <h1 style="text-align: center;">Latest Articles</h1>
-      <div>      <p class="card-text">{{articles[0].content | slice:0:500}}..</p>
+      <div>      <p class="card-text">{{articles[0]?.content | slice:0:500}}..</p>
       </div>      </div>
       <div class="right-slider">
         <div class="widget-content px-0">
