--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -45,7 +45,7 @@
            </div><br>
     
           <div class="d-grid gap-2 col-6 mx-auto">
-          <button routerLink="/addArticles" type="submit" class="btn btn-light">Login</button>
+          <button routerLink="/dashboard" type="submit" class="btn btn-light">Login</button>
           <!-- <span *ngIf="errorMessage" class="alert alert-danger"> {{ errorMessage }}</span> -->
           </div>
       </form>
