--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="card" style="width: 22rem;" *ngFor="let a of articles">
     <div class="position-relative">
-      <img src="{{a.articleImage}}" style="height:15rem;" class="card-img-top" alt="{{a.title}}">
+      <img src="{{a.imageArticle}}" style="height:15rem;" class="card-img-top" alt="{{a.title}}">
       <div class="card-img-overlay d-flex align-items-end justify-content-center">
         <h5 class="card-title text-white">{{a.title | slice:0:20}}</h5>
       </div>
@@ -11,7 +11,7 @@
       <h5 class="card-title ">{{a.title | slice:0:20}}</h5>
       <p class="card-text">{{a.content | slice:0:100}}..</p>
       <div> Posted On:{{a.createdAt | slice:0:10}} </div>
-      <a href="{{a.articleImage}}" target="_blank" class="btn btn-primary">Read More</a>
+      <a href="{{a.imageArticle}}" target="_blank" class="btn btn-primary">Read More</a>
       <button class="btn btn-warning" (click)="deleteArticle(a._id)">Delete</button>
       
     </div>
