--- a/src/app/add-article/add-article.component.html
+++ b/src/app/add-article/add-article.component.html
@@ -31,7 +31,7 @@
   
   
       <div class="input-group mb-3">
-          <input type="file" class="form-control" id="inputGroupFile01" name="articleImage" (change)="onFileSelected($event)">
+          <input type="file" class="form-control" id="inputGroupFile01" name="imageArticle" (change)="onFileSelected($event)">
       </div>
       <div class="d-grid gap-2 col-3" >
         <button class="btn btn-primary"  type="submit">Submit</button>
