--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -12,7 +12,7 @@
     <div class="overlay"></div>
   </div></div>  -->
   <div class="text-container">
-    <img src="assets/background.jpg" alt="Notebook" style="width:100%; height:32rem;">
+    <img src="assets/bg.jpg" alt="Notebook" style="width:100%; height:32rem;">
     <div class="text-block">
       <h1>Digital Business Review Magazine</h1>
       <p>Welcome to Digital Business Review Magazine, your premier source for insightful analysis, in-depth interviews, and cutting-edge trends in the world of digital business.</p>
@@ -89,7 +89,7 @@
     <!-- <div class="imgContent"><img src="assets/background2.jpg"></div> -->
      <!-- <h1 class="heading">DIGITAL BUSINESS REVIEW MAGAZINE</h1>  -->
   </div>
-  <div class="container mb-5 mt-5">
+  <!-- <div class="container mb-5 mt-5">
     <div class="row mb-10 justify-content-center">
       <div class="content">
         <h1 style="text-align: center;"><b>Digital Business Review Magazine</b></h1>
@@ -109,7 +109,7 @@
         <h3 style="text-align: center;">Coming Soon.....</h3>
       </div>
     </div>
-  </div>
+  </div> -->
   
 
 <div>
