--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -7,19 +7,39 @@ button{
     margin: 3rem;
     height: 5rem;
 }
+
 .text-container {
-    position: relative;
-    width: 100%;
-  }
-   
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.text-block {
+  background-color: rgba(0, 0, 0, 0.527);
+  color: white;
+  padding: 2rem;
+  text-align: center;
+  max-width: 80%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* Responsive CSS */
+@media screen and (max-width: 768px) {
   .text-block {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgba(0, 0, 0, 0.527);
-    color: white;
-    padding: 2rem;
-    text-align: center;
-    max-width: 80%; /* Limit the maximum width of the text block */
+    padding: 1rem;
+    max-width: 90%;
   }
+}
+
+@media screen and (max-width: 576px) {
+  .text-block {
+    padding: 0.5rem;
+    max-width: 95%;
+  }
+}
+
+
