--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,17 +18,10 @@
           <a class="nav-link btn"  [routerLink]="['/articles']">Articles</a>
         </li>
         <li class="nav-item" (click)="setActive('magazines')" [class.active]="activeTab === 'magazines'">
-          <a class="nav-link btn"  [routerLink]="['/magazines']">Magazines</a>
+          <a class="nav-link btn"  [routerLink]="['/articles']">Magazines</a>
         </li>
-        <li class="nav-item" (click)="setActive('industry')" [class.active]="activeTab === 'industry'">
+        <!-- <li class="nav-item" (click)="setActive('industry')" [class.active]="activeTab === 'industry'">
           <a class="nav-link btn"  [routerLink]="['/industry']">Industry</a>
-        </li>
-       
-        <!-- <li class="nav-item ">
-          <a class="nav-link disabled" [routerLink]="['/addarticles']">Add Articles</a>
-        </li> -->
-        <!-- <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/addarticles']">Add Magazines</a>
         </li> -->
         <li class="nav-item" (click)="setActive('contactus')" [class.active]="activeTab === 'contactus'">
           <a class="nav-link btn"  [routerLink]="['/contactus']">Contact Us</a>
@@ -36,7 +29,7 @@
         <li class="nav-item" (click)="setActive('aboutus')" [class.active]="activeTab === 'aboutus'">
           <a class="nav-link btn"  [routerLink]="['/aboutus']">About Us</a>
         </li>
-        <li class="nav-item" >
+        <li class="nav-item" (click)="setActive('login')" [class.active]="activeTab === 'login'" >
           <a class="nav-link btn"  [routerLink]="['/login']">Login</a>
         </li>
       </ul>
@@ -50,27 +43,34 @@
   </nav>
   
 
-<nav class="navbar navbar-bottom">
- 
-    <div class="container ">
-      <div class="promo">
-        Get A Chance To Feature In Magazine By Submitting Your Interview Today!
+  <div class="fluid p-0">
+    <nav class="navbar navbar-expand-lg navbar-bottom">
+      <div class="container-fluid ">
+        <span class="promo">Get A Chance To Feature In Magazine By Submitting Your Interview Today!</span>
+        <span class="space"></span>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <!-- Your menu items here -->
+          </ul>
+          <div class="Smedia">
+            <a class="navbar-brand" href="https://www.facebook.com/" target="_blank">
+              <img src="assets/facebook-icon.svg" alt="Bootstrap" width="30" height="27">
+            </a>
+            <a class="navbar-brand" href="https://twitter.com/?lang=en" target="_blank">
+              <img src="assets/twitter-icon.webp" alt="Bootstrap" width="25" height="19">
+            </a>
+            <a class="navbar-brand" href="https://www.instagram.com/" target="_blank">
+              <img src="assets/icons8-instagram.svg" alt="Bootstrap" width="30" height="27">
+            </a>
+            <a class="navbar-brand" href="https://in.linkedin.com/" target="_blank">
+              <img src="assets/icons8-linkedin.svg" alt="Bootstrap" width="30" height="27">
+            </a>
+          </div>
+        </div>
       </div>
-      <div class="Smedia">
-
-        <a class="navbar-brand" href="https://www.facebook.com/" target="_blank">
-          <img src="assets/facebook-icon.svg" alt="Bootstrap" width="30" height="24">
-        </a>
-        <a class="navbar-brand" href="https://twitter.com/?lang=en" target="_blank">
-          <img src="assets/twitter-icon.webp" alt="Bootstrap" width="25" height="22">
-        </a>
-        <a class="navbar-brand" href="https://www.instagram.com/" target="_blank">
-          <img src="assets/icons8-instagram.svg" alt="Bootstrap" width="30" height="24">
-        </a>
-        <a class="navbar-brand" href="https://in.linkedin.com/" target="_blank">
-        <img src="assets/icons8-linkedin.svg" alt="Bootstrap" width="30" height="24">
-      </a>
-    </div>
-    </div>
+    </nav>
+  </div>
   
-</nav>
