--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,15 +1,33 @@
 .text-container {
-    position: relative;
-    width: 100%;
-  }
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 .text-block {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgba(0, 0, 0, 0.527);
-    color: white;
-    padding: 2rem;
-    text-align: center;
-    width: 40%;
+  background-color: rgba(0, 0, 0, 0.527);
+  color: white;
+  padding: 2rem;
+  text-align: center;
+  max-width: 80%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* Responsive CSS */
+@media screen and (max-width: 768px) {
+  .text-block {
+    padding: 1rem;
+    max-width: 90%;
   }
+}
+
+@media screen and (max-width: 576px) {
+  .text-block {
+    padding: 0.5rem;
+    max-width: 95%;
+  }
+}
