--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -6,4 +6,8 @@
     display: flex;
     justify-content: center; /* Horizontally center the content */
     align-items: center;
+    margin-bottom: 2rem;
+}
+.justify{
+    text-align: justify;
 }
