--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,10 +3,24 @@
     <div class="row">
       <a class="image" href="#" >
         <img src="assets/logobgR.jpg" alt="logo" width="280rem" height="60rem">
-      </a>
+      </a><br><br>
       <div class="col-md-4">
-        <div><b>Digital Business </b>Review Magazine is a  your premier source for insightful analysis, in-depth interviews, and cutting-edge trends in the world of digital business.
+        <div><b><h3>Digital Business </h3></b>
+          <div class="justify"> Review Magazine is a  your premier source for insightful analysis, in-depth interviews, and cutting-edge trends in the world of digital business.
+          </div>
      </div>
+     <a class="navbar-brand" href="https://www.facebook.com/" target="_blank">
+      <img src="assets/facebook-icon.svg" alt="Bootstrap" width="30" height="24">
+    </a>
+    <a class="navbar-brand" href="https://twitter.com/?lang=en" target="_blank">
+      <img src="assets/twitter-icon.webp" alt="Bootstrap" width="25" height="20">
+    </a>
+    <a class="navbar-brand" href="https://www.instagram.com/" target="_blank">
+      <img src="assets/icons8-instagram.svg" alt="Bootstrap" width="30" height="24">
+    </a>
+    <a class="navbar-brand" href="https://in.linkedin.com/" target="_blank">
+    <img src="assets/icons8-linkedin.svg" alt="Bootstrap" width="30" height="24">
+  </a>   
       </div>
       <div class="col-md-4"><h3>Quick Links</h3><div>
         <label >About Us</label><br>
@@ -22,18 +36,7 @@
           City, State, Zip<br>
           Country<br>
           Email: digitalbusinessreviewmagazinegmail.com<br></address>
-          <a class="navbar-brand" href="https://www.facebook.com/" target="_blank">
-          <img src="assets/facebook-icon.svg" alt="Bootstrap" width="30" height="24">
-        </a>
-        <a class="navbar-brand" href="https://twitter.com/?lang=en" target="_blank">
-          <img src="assets/twitter-icon.webp" alt="Bootstrap" width="25" height="20">
-        </a>
-        <a class="navbar-brand" href="https://www.instagram.com/" target="_blank">
-          <img src="assets/icons8-instagram.svg" alt="Bootstrap" width="30" height="24">
-        </a>
-        <a class="navbar-brand" href="https://in.linkedin.com/" target="_blank">
-        <img src="assets/icons8-linkedin.svg" alt="Bootstrap" width="30" height="24">
-      </a>      
+            
       </div>
       <div></div>
     </div>
