--- a/src/app/articles/articles.component.css
+++ b/src/app/articles/articles.component.css
@@ -1,9 +1,14 @@
 .container{
-  background-color: rgb(230, 210, 210);
+  background-color: rgb(176, 173, 173);
   display: flex;
   flex-flow: wrap;
 }
 
 .container div{
   margin: 10px;
+}
+.center-align {
+  display: block; /* Ensure the link is treated as a block-level element */
+  width: fit-content; /* Make the link's width fit its content */
+  margin: 0 auto; /* Center the link horizontally */
 }
