--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -1,7 +1,7 @@
 
 .imgContainer {
   position: relative;
-  max-height: 800rem; /* Maximum width */
+  height: 20rem; /* Maximum width */
   margin: 0 auto; /* Center it */
 }
 .large-image{
@@ -20,20 +20,22 @@
 } */
 .content-and-slider{
   padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding-bottom: 3rem;
   display: flex;
   width: 99vw;
-  height: 60vh;
-  background-color: rgb(249, 245, 240);
+  height: 28rem;
+  background-color: rgb(217, 215, 212);
 }
 
 .left-content{
  padding-top: 2rem;
  padding-bottom: 2rem;
+ padding-left: 2rem;
+ padding-right: 2rem;
   flex: 1;
   background-color: rgb(0, 0, 0);
   color: white;
-  /* text-align: justify; */
+  text-align: justify;
 }
 .right-slider {
   justify-content: center;
@@ -48,10 +50,36 @@
   max-height: auto;
 }
 
-.container1{
+.container1 {
   padding-left: 2rem;
   padding-right: 2rem;
 }
+
+.image-wrapper {
+  position: relative;
+}
+
+.fixed-image-size {
+  width: 100%; /* Adjust as needed */
+  height: 21rem; /* Fixed height for all images */
+  object-fit: cover;
+}
+
+.read-more-wrapper {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  color: rgb(255, 255, 255);
+  background-color: rgba(255, 255, 255, 0.523);
+}
+
+.read-more-button {
+  display: inline-block;
+}
+
   .container{
     background-color: rgb(60, 61, 61);
     display: flex;
@@ -108,11 +136,13 @@
     margin: 10px;
   }
   .carousel-item img {
-    display: block;
-    margin: 0 auto;
+    height: 30rem; 
+    width: 80%;  
+    margin: auto; 
   }
   .img1 {
-    max-height: 300rem; /* Adjust the maximum height as needed */
+    height: 50rem; 
+    width: 900rem;
     transition: max-height 0.5s ease;
   }
   
@@ -146,7 +176,8 @@
   padding-top: 2rem;
   padding-bottom: 2rem;
   display :block;
-  background-color: rgb(54, 53, 53);
+  background-color: rgb(255, 255, 255);
+
 }
 
 .content{
@@ -176,8 +207,42 @@
     height: 50%;
 }
 
+.cont {
+  display: flex;
+  flex-wrap: wrap;
+}
 
+.left-image {
+  width: 50%;
+  float: left;
+  height: 70rem;
+  overflow: hidden;
+}
 
+.right-images {
+  width: 50%;
+  float: left;
+  /* height:35rem; */
+  overflow: hidden;
+}
+
+.left-image img {
+  width: 100%;
+  height: 50%;
+  object-fit: cover;
+}
+
+.right-images img {
+  width: 100%;
+  height: 20%;
+  object-fit: cover;
+}
+
+@media screen and (max-width: 768px) {
+  .left-image, .right-images {
+      width: 100%;
+  }
+}
 .background-wrapper {
     /* background-image: url('assets/background.avif'); */
     background-size: cover; /* Adjust background size as needed */
