--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -20,8 +20,8 @@
   </div>
   
   <div class="carouselBg">
-    <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner justify-content-center"> <!-- Add justify-content-center class here -->
+    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
+      <div class="carousel-inner justify-content-center">
         <div class="carousel-item" *ngFor="let a of articles; let i = index" [class.active]="i === 0">
           <img src="{{a.imageArticle}}" class="d-block img1 mx-auto" alt="{{a.title}}"> 
           <div class="carousel-caption d-none ">
@@ -32,11 +32,11 @@
             <h5>{{a.title}}</h5>
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
@@ -47,11 +47,12 @@
     <div class="content-and-slider">
       <div class="left-content">
           <h1 style="text-align: center;">Latest Articles</h1>
-      <div>      <p class="card-text">{{articles[0]?.content | slice:0:500}}..</p>
+      <div>  
+            <p class="card-text">{{articles[0]?.content | slice:0:500}}..</p>
       </div>      </div>
       <div class="right-slider">
         <div class="widget-content px-0">
-          <div class="chart d-flex justify-content-center">
+          <div class="chart d-flex justify-content-center fixed-image-size">
             <img src="{{articles[0]?.imageArticle}}" 
             alt="{{articles[0]?.title}}" 
             class="large-image" alt="Image 1">
@@ -123,20 +124,38 @@
     
 
       
-      <div class="container1">
-    <div class="row justify-content-between">
-      <div class="col-md-3 mt-4 mb-5" *ngFor="let a of articles; let i = index" [class.active]="i === 0">
-        <div class="widget-content px-0">
-          <div class="chart d-flex justify-content-center">
-            <div class="image-wrapper" style="background-color: #000;">
-              <img src="{{a.imageArticle}}" alt="{{a.title}}"class="img-fluid h-100" alt="Image 1">
-              <a href="{{a.imageArticle}}" target="_blank" class="btn btn-primary">Read More</a>
-
+<div class="container1">
+  <div class="row justify-content-between">
+    <div class="col-md-3 mt-4 mb-5" *ngFor="let a of articles; let i = index" [class.active]="i === 0">
+      <div class="widget-content px-0">
+        <div class="chart d-flex justify-content-center">
+          <div class="image-wrapper">
+            <img src="{{a.imageArticle}}" alt="{{a.title}}" class="img-fluid fixed-image-size" alt="Image 1">
+            <div class="read-more-wrapper">
+              <a href="{{a.imageArticle}}" target="_blank" class="btn read-more-button">Read More</a>
             </div>
           </div>
         </div>
       </div>
+    
+
+  
       
+      <!-- <div class="cont">
+        <div class="left-image">
+            <!-- <img  src="assets/DBR.png" alt="Left Image">
+            <img  src="assets/sample.jpg" alt="Left Image">
+        </div>
+        <div class="right-images">
+            <div>
+                <img  src="assets/background.jpg" alt="Right Image Top">
+            </div>
+            <div>
+                <img  src="assets/sample.jpg" alt="Right Image Bottom">
+            </div>
+        </div>
+    </div> -->
+    
       <!-- <div class="col-md-3 mt-4 mb-4">
         <div class="widget-content px-0">
           <div class="chart d-flex justify-content-center">
