--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,7 +4,7 @@
       <a class="image" href="#" >
         <img src="assets/logobgR.jpg" alt="logo" width="280rem" height="60rem">
       </a><br><br>
-      <div class="col-md-4">
+      <div class="col-md-5">
         <div><b><h3>Digital Business </h3></b>
           <div class="justify"> Review Magazine is a  your premier source for insightful analysis, in-depth interviews, and cutting-edge trends in the world of digital business.
           </div>
@@ -22,12 +22,12 @@
     <img src="assets/icons8-linkedin.svg" alt="Bootstrap" width="30" height="24">
   </a>   
       </div>
-      <div class="col-md-4"><h3>Quick Links</h3><div>
-        <label >About Us</label><br>
-        <label >Advertise with Us</label><br>
-        <label >Pay Online</label><br>
-        <label >Subscribe Today</label><br>
-        <label >Privacy Policy</label><br>
+      <div class="col-md-3 justify"><h3>Quick Links</h3><div>
+        <a class="nav-link btn"  [routerLink]="['/articles']">Articles</a>
+        <a class="nav-link btn"  [routerLink]="['/articles']">Magazines</a>
+        <a class="nav-link btn"  [routerLink]="['/contactus']">Contact Us</a>
+        <a class="nav-link btn"  [routerLink]="['/aboutus']">About Us</a>
+        <a class="nav-link btn"  [routerLink]="['/login']">Login</a>
       </div></div>
       <div class="col-md-4">
         <h5><h3>Contact Us</h3></h5>
