--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,13 +1,12 @@
 
-button{
+/* button{
     background-color: white;
     color: black;
     padding-left: 5rem;
     padding-right: 5rem;
     margin: 3rem;
     height: 5rem;
-}
-
+} */
 .text-container {
   position: relative;
   width: 100%;
@@ -16,7 +15,7 @@ button{
 }
 
 .text-block {
-  background-color: rgba(0, 0, 0, 0.527);
+  background-color: rgba(0, 0, 0, 0.733);
   color: white;
   padding: 2rem;
   text-align: center;
@@ -42,4 +41,33 @@ button{
   }
 }
 
+button {
+  background-color: white;
+  color: black;
+  padding: 2vw 2vw;
+  margin: 1vw;
+  height: auto;
+  font-size: 1vw;
+  text-align: center; /* Center the text inside the button */
+}
 
+/* Responsive CSS */
+@media screen and (max-width: 768px) {
+  button {
+    padding: 1.5vw 3vw; /* Adjust padding for smaller screens */
+    margin: 2vw; /* Adjust margin for smaller screens */
+    font-size: 1.5vw; /* Adjust font size for smaller screens */
+  }
+}
+
+@media screen and (max-width: 576px) {
+  button {
+    padding: 1vw 2vw; /* Adjust padding for even smaller screens */
+    margin: 1.5vw; /* Adjust margin for even smaller screens */
+    font-size: 1vw; /* Adjust font size for even smaller screens */
+  }
+}
+
+.signout{
+   border-radius: 1rem;
+}
