--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,13 +1,13 @@
 
 <div class="text-Container">
-    <img src="assets/small-image.jpg" alt="Notebook" style="width:100%; height:32rem;">
+    <img src="assets/dgBackground.png" alt="Notebook" style="width:100%; height:32rem;">
     <div class="text-block">
             <button type="button" class="btn btn-dark" routerLink="/addarticles">Add Article</button>
             
             <button type="button" class="btn btn-dark" routerLink="/addMagazines">Add Magazine</button>
             <li >
                 <a class="more-opt-open" (click)="logout()" href="javascript:void(0)">
-                      <button style="width: fit-content; height: fit-content; border-radius: 30rem;" class="signout" matTooltip="Signout" matTooltipPosition="below">Signout</button>
+                      <button style="width: 10rem;" class="signout" matTooltip="Signout" matTooltipPosition="below">Signout</button>
                 </a>
               </li>
    </div>
