--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -29,26 +29,24 @@
         
     </form> 
     </div> -->
-    <div class="text-Container">
-        <img src="assets/small-image.jpg" alt="Notebook" style="width:100%; height:32rem;">
+    <div class="text-Container" >
+        <img src="assets/dgBackground.png" alt="Notebook" style="width:100%; height:32rem;">
         <div class="text-block">
+            <form [formGroup]="loginForm" (ngSubmit)="onSubmitLogin()" enctype="multipart/form-data">
+                <label style="color: white;" for="inputEmail6">Email address</label>
+                <div class="form-floating mb-3">
+                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" formControlName="email">
+                </div>
     
-        <form [formGroup]="loginForm" (ngSubmit)="onSubmitLogin()" enctype="multipart/form-data">
-          <label style="color: white;" for="inputEmail6">Email address</label>
-          <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" formControlName="email">
-        </div>
+                <label style="color: white;" for="inputPassword6">Password</label>
+                <div class="form-floating">
+                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password" formControlName="password">
+                </div><br>
     
-          <label style="color: white;" for="inputPassword6">Password</label>
-          <div class="form-floating">
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Password" formControlName="password">
-           </div><br>
+                <div class="d-grid gap-2 col-6 mx-auto">
+                    <button type="submit" class="btn btn-light">Login</button>
+                </div>
+            </form>
+        </div>
+    </div>
     
-          <div class="d-grid gap-2 col-6 mx-auto">
-          <button routerLink="/dashboard" type="submit" class="btn btn-light">Login</button>
-          <!-- <span *ngIf="errorMessage" class="alert alert-danger"> {{ errorMessage }}</span> -->
-          </div>
-      </form>
-        
-        </div>
-        </div>
