--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -30,7 +30,7 @@
     </form> 
     </div> -->
     <div class="text-Container" >
-        <img src="assets/dgBackground.png" alt="Notebook" style="width:100%; height:32rem;">
+        <img src="assets/background1.webp" alt="Notebook" style="width:100%; height:32rem;">
         <div class="text-block">
             <form [formGroup]="loginForm"  (ngSubmit)="onSubmitLogin()" enctype="multipart/form-data">
                 <label style="color: white;" for="inputEmail6">Email address</label>
